[package]
name = "dasher_queue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
cascade = "1.0.0"
gio = "0.14.8"
glib = "0.14.8"
gtk = "0.14.3"
libc = "0.2.104"
users = "0.11.0"
slotmap = { version = "1.0.6", features = ["serde"] }
mysql = "21.0.2"
pnet = "0.28.0"
local-ip = { git = "https://github.com/tcr/rust-local-ip.git" }
gtk-sys = "0.14.0"
fomat-macros = "0.3.1"
